fix logo (enkel xourse-logo...)

--- a/global.css
+++ b/global.css
@@ -997,8 +997,14 @@ span.xmqa1 {
 
 
 img.brandlogo {
+	display: none;      /* ONLY natuurkunde xourse-logo ! */
     max-height: 6rem;
     max-width: 20vw;
+}
+
+img.xourselogo{
+	display: block;
+	max-height: unset;
 }
 
 
